--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.11",
     "mariadb": "^2.2.0",
     "morgan": "~1.9.1",
