--- a/giggly-ui/package.json
+++ b/giggly-ui/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "dateformat": "^3.0.3",
     "express-session": "^1.17.0",
     "react": "^16.13.0",
     "react-confirm-alert": "^2.6.1",
